# LearnMate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  AGENTS.md  CHUNKING_AND_QDRANT_PLAN.md  Dockerfile  QUIZ_FEATURE_PLAN.md  README.md  SUMMARY.md  docker-compose.yml  learnmate_rag_test_document.txt  pyproject.toml  skills-lock.json
.omx/: metrics.json
.omx/logs/: turns-2026-05-18.jsonl
.omx/state/: subagent-tracking.json  update-check.json
api/: __init__.py
api/v1/routes/: __init__.py  chat.py
api/v1/schemas/: __init__.py  chat.py
docs/agent/: architecture.md  coding-rules.md  decisions.md  project-context.md
src/: main.py
src/api/: exception.py
src/api/dependencies/: db.py  documents.py  llm.py
src/api/middlewares/: request_context.py
src/api/schemas/: quiz.py
src/api/v1/routes/: __init__.py  chat.py  health.py  materials.py
src/api/v1/schemas/: chat.py  documents.py
src/configs/: env.py  exception.py  logging.py
src/infrastructure/: logging.py
src/infrastructure/db/: __init__.py  session.py
src/infrastructure/db/migrations/: alembic.ini  env.py
src/infrastructure/db/models/: __init__.py  document.py  (+2 more)
src/infrastructure/llm/: embeddings.py  langsmith.py  openai.py
src/infrastructure/storage/: __init__.py  s3.py
src/infrastructure/vector/: __init__.py  qdrant.py
src/services/documents/: chunking.py  enums.py  extraction.py  indexing.py  quiz.py  repositories.py  retrieval.py  summary.py  topic_summary.py  upload.py  vector_index.py
src/services/llm/: chat_agent.py  enums.py  rag.py  tracing.py
(+9 files in other folders)
